fix: update image alt text and improve CSS formatting for better readability

--- a/style.css
+++ b/style.css
@@ -4,9 +4,10 @@
 }
 
 html {
-  color: #ffffff;
+  color: rgb(255, 255, 255);
   background-color: #212830;
   font-family: "Segoe UI", sans-serif;
+  font-size: 12px;
 }
 
 body {
@@ -28,7 +29,7 @@ main {
 }
 
 h1 {
-color:#212830;
+  color: #212830;
 }
 
 h2 {
@@ -54,7 +55,6 @@ nav {
 }
 
 article {
-  display: flexbox;
   margin: 1% auto;
   padding: 1%;
 }
@@ -108,6 +108,7 @@ nav a :hover {
   margin: 0 auto;
   width: 100%;
 }
+
 #activities {
   display: flex;
 }
@@ -128,7 +129,6 @@ nav a :hover {
 #presentation article p {
   text-align: center;
   margin-top: 4%;
-
 }
 
 #activities article img {
